fixed spacing in components, working routing

--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -4,38 +4,33 @@
   padding: 50px 50px 50px 50px;
   font-family: $font-primary-black;
   display: flex;
-  flex-direction: row;
-  width: 100vw;
   justify-content: space-between;
 
   .left {
     display: flex;
     flex-direction: row;
-  }
+    align-items: center;
 
-  .genie {
-    max-height: 123px;
-    max-width: 123px;
-    margin-left: 50px;
-    margin-right: 50px;
-    flex: 1;
-  }
+    .genie {
+      margin-right: 10px;
+    }
 
-  .genie-text {
-    margin-top: 40px;
-    margin-bottom: 40px;
-    height: 50px;
-    width: 100px;
+    .genie-text {
+      margin-left: 10px;
+      max-width: 97px;
+      max-height: 37px;
+    }
   }
 
   .link-container {
-    margin: auto;
-    flex: display;
+    display: flex;
     flex-direction: row;
+    align-items: center;
+    max-width: 100vw;
+    margin-right: 45px;
 
     .links {
       padding-left: 10px;
-      align-self: center;
     }
   
     .link-text {
@@ -51,8 +46,6 @@
       }
     }
   }
-
-
 
   .buffer {
     flex: 2;
